--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,28 @@
   padding: 0;
 }
 
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+
 #container {
   display: flex;
   flex-direction: column;
   margin: 50px auto;
+  padding: 10px;
   width: 70%;
   height:70%;
   border: 1px solid blue;
+}
+
+#container h2 {
+  padding: 10px 0;
+}
+
+#question-info {
+  display: flex;
+  justify-content: space-between;
 }
 
 .rows {
@@ -23,4 +38,18 @@
 .answer-btn {
   width: 200px;
   height: 80px;
+}
+
+#result {
+  font-weight: bold;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.good-answer {
+  color: green;
+}
+
+.wrong-answer {
+  color: red;
 }
