--- a/styles/quiz-style.css
+++ b/styles/quiz-style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Lato", sans-serif;
 }
 
 h1 {
@@ -40,6 +43,10 @@ h1 {
   height: 80px;
 }
 
+#question-info, .answer-btn, #score {
+  font-size: 1.2em;
+}
+
 #result {
   font-weight: bold;
   font-size: 1.5em;
@@ -47,9 +54,19 @@ h1 {
 }
 
 .good-answer {
-  color: green;
+  color: #32CD32;
 }
 
 .wrong-answer {
-  color: red;
+  color: #DC143C;
+}
+
+.btn-right-answer {
+  background: #32CD32;
+  box-shadow: 5px 5px 9px #32CD32;
+}
+
+.btn-wrong-answer {
+  background: #DC143C;
+  box-shadow: 5px 5px 9px #DC143C;
 }
