--- a/styles/home.css
+++ b/styles/home.css
@@ -8,18 +8,46 @@
 }
 
 body {
-  margin: 10px;
+  margin: 15px;
   font-size: 16px;
+  background-image: url("../img/background-img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1 {
   text-align: center;
 }
 
+h2 {
+  text-align: center;
+  margin: 10px;
+}
+
+h3 {
+  margin: 10px 0 5px 0;
+  text-align: center;
+}
+
+h3 + p {
+  text-align: center;
+  font-size: 1.1em;
+}
+
+h1, h2, h3, p, .theme-box, #intro {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+#intro {
+  font-size: 1.1em;
+  width: 50%;
+  margin: 15px auto;
+  text-align: center;
+}
+
 #home-container {
   margin: auto;
   width: 80%;
-  height: 80%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -27,23 +55,88 @@ h1 {
 
 hr {
   margin: 5px;
+  border: 1px solid black;
+}
+
+button {
+  font-size: 0.8em;
+}
+
+#shuffle, #mixed-themes {
+  width: 50%;
+  margin: 10px;
+}
+
+#shuffle-btn {
+  margin: auto;
+}
+
+#themes-part-1 {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-self: center;
+}
+
+#themes {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(1fr, 5);
+  column-gap: 5px;
 }
 
 .theme-box {
   margin: 5px;
-  border: 1px solid green;
-  width: 33%;
+  border: 1px solid lightslategray;
+  border-radius: 5px;
+  min-width: 100%;
+  height: 120px;
   font-size: 1.2em;
+  display: flex;
+  flex-direction: column;
 }
 
-.theme-box a {
-  text-decoration: none;
+.level-box {
+  display: flex;
+  justify-content: space-around;
+}
+
+.level-box button {
+  border: none;
+  border-radius: 2px;
+}
+
+.level-box button:nth-child(1) {
+  background: #56ab2f;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #a8e063, #56ab2f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.level-box button:nth-child(2) {
+  background: #f12711;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.level-box button:nth-child(3) {
+  background: #D31027;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #EA384D, #D31027);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #EA384D, #D31027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 button.theme-btn {
   width: 200px;
   height: 50px;
-  margin: 5px calc(35% / 2);
+  margin: 5px;
+  padding: 0 5px;
+  align-self: center;
+  background: #D3CCE3;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border: none;
+  border-radius: 2px;
+
 }
 
 button.difficulty {
