--- a/styles/home.css
+++ b/styles/home.css
@@ -10,7 +10,7 @@
 body {
   margin: 15px;
   font-size: 16px;
-  background-image: url("./img/background-img.jpg");
+  background-image: url("../img/background-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
