--- a/styles/quiz-style.css
+++ b/styles/quiz-style.css
@@ -74,7 +74,7 @@ h1, #container {
 #question-info {
   display: flex;
   justify-content: space-between;
-  color: dimgray;
+  color: #2B32B2;
 }
 
 .rows {
@@ -96,13 +96,19 @@ h1, #container {
   color: white;
 }
 
-button {
+button, button:focus {
   outline: none;
 }
 
-button:hover {
-  cursor: pointer;
-  box-shadow: 5px 5px 9px #2B32B2;
+button:focus-visible {
+  outline: 1px solid black;
+}
+
+@media(min-width: 480px) {
+  button:hover {
+    cursor: pointer;
+    box-shadow: 5px 5px 9px #2B32B2;
+  }
 }
 
 #question-info, .answer-btn, #score {
@@ -127,9 +133,15 @@ button:hover {
 }
 
 .result-text {
-  font-size: 1.1em;
+  font-size: 1.2em;
   text-align: center;
   margin: 50px 0;
+}
+
+.final-score {
+  font-size: 2.5em;
+  font-weight: bold;
+  color: #2B32B2;
 }
 
 .result-img {
