--- a/styles/home.css
+++ b/styles/home.css
@@ -11,8 +11,7 @@ body {
   margin: 15px;
   font-size: 16px;
   background-image: url("../img/background-img.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat;
 }
 
 h1 {
@@ -40,18 +39,18 @@ h1, h2, h3, p, .theme-box, #intro {
 }
 
 #intro {
-  font-size: 1.1em;
-  width: 50%;
+  font-size: 1.2em;
+  width: 95%;
   margin: 15px auto;
   text-align: center;
 }
 
 #home-container {
-  margin: auto;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  justify-content: center;
+  box-sizing: border-box;
 }
 
 hr {
@@ -60,41 +59,34 @@ hr {
 }
 
 button {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 button:hover {
   cursor: pointer;
 }
 
+#shuffle-btn {
+  margin: auto;
+  width: 80%;
+  height: 50%;
+  font-size: 1.1em;
+}
+
 #shuffle, #mixed-themes {
-  width: 50%;
   margin: 10px;
 }
 
-#shuffle-btn {
-  margin: auto;
-}
-
 #themes-part-1 {
-  width: 80%;
-  display: flex;
-  justify-content: space-around;
-  align-self: center;
-}
-
-#themes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(1fr, 5);
-  column-gap: 10px;
+  width: 100%;
+  align-self: center; 
 }
 
 .theme-box {
-  margin: 5px;
+  margin: 15px 0;
   border: 1px solid lightslategray;
   border-radius: 5px;
-  min-width: 100%;
+  width: 100%;
   height: 120px;
   font-size: 1.2em;
   display: flex;
@@ -141,11 +133,100 @@ button.theme-btn {
   background: linear-gradient(to right, #E9E4F0, #D3CCE3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border: none;
   border-radius: 2px;
-
 }
 
 button.difficulty {
   width: 80px;
   height: 40px;
   margin: 5px 10px;
+  color: white;
+}
+
+/* Media queries */
+@media(min-width: 480px) {
+  body {
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  #intro {
+    font-size: 1.1em;
+    width: 50%;
+    margin: 15px auto;
+    text-align: center;
+  }
+
+  #home-container {
+    width: 80%;
+    margin: auto;
+  }
+
+  #shuffle-btn {
+    margin: auto;
+  }
+
+  #shuffle, #mixed-themes {
+    width: 50%;
+    margin: 10px;
+  }
+
+  #themes-part-1 {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-self: center;
+  }
+
+  #themes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(1fr, 5);
+    column-gap: 10px;
+  }
+
+  .theme-box {
+    margin: 15px 0;
+    border: 1px solid lightslategray;
+    border-radius: 5px;
+    min-width: 100%;
+    height: 120px;
+    font-size: 1.2em;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media(min-width: 480px) and (max-width: 768px) {
+  #intro {
+    width: 90%;
+  }
+
+  button.theme-btn {
+    width: 200px;
+    height: 80px;
+  }
+
+  #themes-part-1 {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-self: center;
+  }
+
+  #mixed-themes .theme-box {
+    margin-top: 37px;
+  }
+
+  #themes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(1fr, 9);
+    column-gap: 20px;
+  }
+
+  .theme-box {
+    padding: 10px;
+  }
 }
